fixed buttons, fixed hero banner text so it stays centered when stretches to 600px, created second hero banner, formatted membership area

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ nav{
   margin: 0em;
   padding: 0em;
   width: 100%;
+  clear: both;
 
   background-color: #939598;
 }
@@ -92,6 +93,7 @@ nav{
   }
 
   .seven h2{
+    width: 100%;
     position: absolute;
     top: 60px;
 
@@ -100,6 +102,7 @@ nav{
   }
 
   .seven p{
+    width: 100%;
     position: absolute;
     top: 100px;
 
@@ -144,14 +147,19 @@ dd{
 }
 
 .button{
-  display: inline-block;
+  padding: 0em;
+  padding-bottom: 1em;
   padding-top: 1em;
-  width: 100%;
 }
 
   .button a{
+    display: inline;
+    margin-top: 1em;
     padding: .5em;
+    width: 100%;
+    float: left;
     text-align: center;
+    clear: both;
 
     background-color: #939598;
 
@@ -165,9 +173,9 @@ dd{
 
 .tickets{
   background-color: #fff;
-  padding: 0em;
   padding-bottom: 1em;
   padding-top: 1em;
+  clear: both;
 }
 
   .price{
@@ -190,3 +198,80 @@ dd{
   .tickets a:hover{
     background-color: #6d6e71;
   }
+
+.member{
+  padding-bottom: 1em;
+  padding-top: 1em;
+}
+
+  .member a{
+    display: inline;
+    padding: .5em;
+    width: 50%;
+    float: left;
+    text-align: center;
+
+    background-color: #939598;
+
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .member a:hover{
+    background-color: #6d6e71;
+  }
+
+.mem{
+  padding: .75em;
+}
+
+.atlantis{
+  position: relative;
+}
+
+  .atlantis img{
+    width: 100%;
+    padding: 0em;
+  }
+
+  .atlantis h2{
+    position: absolute;
+    width: 100%;
+    top: 60px;
+
+    text-align: center;
+    color: #fff;
+  }
+
+  .atlantis p{
+    position: absolute;
+    width: 100%;
+    top: 100px;
+
+    text-align: center;
+    color: #fff;
+  }
+
+.times{
+  padding: 0em;
+  padding-bottom: 1em;
+  padding-top: 1em;
+}
+
+.times a{
+  display: inline;
+  padding: .5em;
+  width: 100%;
+  float: left;
+  text-align: center;
+  clear: both;
+
+  background-color: #939598;
+
+  text-decoration: none;
+  color: #fff;
+}
+
+.times a:hover{
+  background-color: #6d6e71;
+}
